OGLAClient/src_common/alibc/oapi.pas


const
GRPEDIT_SETUSERFLAG =$0001; ///< replace the group's UsrFlag entry with the value in the GROUPEDITSPEC structure.
GRPEDIT_ADDUSERFLAG =$0002; ///< Add the UsrFlag value to the group's UsrFlag entry
GRPEDIT_DELUSERFLAG =$0004; ///< Remove the UsrFlag value from the group's UsrFlag entry
GRPEDIT_VTXCRDX     =$0008; ///< Replace vertex x-coordinates
GRPEDIT_VTXCRDY     =$0010; ///< Replace vertex y-coordinates
GRPEDIT_VTXCRDZ     =$0020; ///< Replace vertex z-coordinates
GRPEDIT_VTXCRD      =(GRPEDIT_VTXCRDX or GRPEDIT_VTXCRDY or GRPEDIT_VTXCRDZ); ///< Replace vertex coordinates
GRPEDIT_VTXNMLX     =$0040; ///< Replace vertex x-normals
GRPEDIT_VTXNMLY     =$0080; ///< Replace vertex y-normals
GRPEDIT_VTXNMLZ     =$0100; ///< Replace vertex z-normals
GRPEDIT_VTXNML      =(GRPEDIT_VTXNMLX or GRPEDIT_VTXNMLY or GRPEDIT_VTXNMLZ); ///< Replace vertex normals
GRPEDIT_VTXTEXU     =$0200; ///< Replace vertex u-texture coordinates
GRPEDIT_VTXTEXV     =$0400; ///< Replace vertex v-texture coordinates
GRPEDIT_VTXTEX      =(GRPEDIT_VTXTEXU or GRPEDIT_VTXTEXV); ///< Replace vertex texture coordinates
GRPEDIT_VTX         =(GRPEDIT_VTXCRD or GRPEDIT_VTXNML or GRPEDIT_VTXTEX); ///< Replace vertices

EVENT_VESSEL_INSMESH     =0; ///< Insert a mesh (context: mesh index)
EVENT_VESSEL_DELMESH     =1; ///< Delete a mesh (context: mesh index, or -1 for all)
EVENT_VESSEL_MESHVISMODE =2; ///< Set mesh visibility mode (context: mesh index)
EVENT_VESSEL_CLEARANIM   =4; ///< Clear all animations (context: UINT (1=reset animations, 0=leave animations at current state)
EVENT_VESSEL_DELANIM     =5; ///< Delete an animation (context: animation index)
EVENT_VESSEL_NEWANIM     =6; ///< Create a new animation (context: animation index)
EVENT_VESSEL_MESHOFS     =7; ///< Shift a mesh (context: mesh index)
EVENT_VESSEL_MODMESHGROUP=8; ///< A mesh group has been modified


type
GROUPEDITSPEC=record
 flags:dword;   ///< flags (see \ref grpedit)
 UsrFlag:dword; ///< Replacement for group UsrFlag entry
 Vtx:paNTVERTEX; ///< Replacement for group vertices
 nVtx:dword;    ///< Number of vertices to be replaced
 vIdx:pworda;    ///< Index list for vertices to be replaced
end;
pGROUPEDITSPEC=^GROUPEDITSPEC;


VCHUDSPEC=record
 nmesh,ngroup:dword;
 hudcnt:vec;
 size:double;
end;
pVCHUDSPEC=^VCHUDSPEC;

VCMFDSPEC=record
 nmesh,ngroup:dword;
end;
pVCMFDSPEC=^VCMFDSPEC;

  


var     
dbgprint:procedure(s:pchar); cdecl;
oapiGetSize:function(hObj:dword):double;cdecl;
oapiGetMass:function(hObj:dword):double;cdecl;

oapiGetObjectName:procedure(hObj:dword;name:pchar;siz:integer);cdecl; 

oapiGetHeading:function(hObj:dword;hdg:pdouble):integer;cdecl; 
oapiGetFocusHeading:function(hdg:pdouble):integer;cdecl; 
oapiGetAltitude:function(hObj:dword;alt:pdouble):integer;cdecl; 
oapiGetFocusAltitude:function(alt:pdouble):integer;cdecl; 

oapiGetTimeAcceleration:function:double;cdecl;

oapiGetEquPos:function(hObj:dword;lon,lat,rad:pdouble):integer;cdecl;  
oapiGetFocusEquPos:function(lon,lat,rad:pdouble):integer;cdecl; 


oapiCameraAperture:function:double;cdecl; 
oapiCameraGlobalPos:procedure(gpos:pvec);cdecl; 
oapiCameraGlobalDir:procedure(gdir:pvec);cdecl; 
oapiCameraTarget:function:ohnd;cdecl; 

oapiGetGbodyByIndex:function(index:integer):ohnd;cdecl; 
oapiGetGbodyByName:function(name:pchar):ohnd;cdecl; 
oapiGetGlobalPos:procedure(hObj:ohnd;pos:pvec);cdecl; 
oapiGetGlobalVel:procedure(hObj:ohnd;vel:pvec);cdecl; 
oapiGetObjectCount:function:integer;cdecl; 
oapiGetObjectByIndex:function(index:integer):ohnd;cdecl; 

oapiGetPlanetAtmConstants:function(hObj:ohnd):pATMCONST;cdecl; 
oapiGetPlanetAtmParams:procedure(hObj:ohnd;rad:double;prm:pATMPARAM);cdecl; 
oapiGetPlanetAtmParamsnew:procedure(hObj:ohnd;alt,lng,lat:double;prm:pATMPARAM);cdecl; 

oapiGetObjectType:function(hObj:ohnd):integer;cdecl; 
oapiGetFocusObject:function:ohnd;cdecl; 
oapiGetBaseCount:function(hObj:ohnd):integer;cdecl; 
oapiGetBaseByIndex:function(hPlanet:ohnd;index:integer):ohnd;cdecl;

oapiGetSimTime:function:double;cdecl; 
oapiGetSimMJD:function:double;cdecl; 

oapiCameraRotationMatrix:procedure(rmat:pmat);cdecl; 
oapiCameraMode:function:integer;cdecl; 

oapiGetRotationMatrix:procedure(hObj:ohnd;rmat:pmat);cdecl; 


oapiCameraProxyGbody:function:ohnd;cdecl; 
oapiPlanetHasAtmosphere:function(hObj:ohnd):boolean;cdecl; 

oapiGetObjectParam:function(hObj:ohnd;paramtype:dword):pointer;cdecl;

oapiGetVesselInterface:function(hObj:ohnd):pointer;cdecl;
oapiGetFocusInterface:function:pointer;cdecl;

oapiDeleteMesh:procedure(hMesh:pointer);cdecl;
oapiMeshGroupCount:function(hMesh:pointer):dword;cdecl;
oapiMeshGroupEx:function(hMesh:pointer;idx:dword):pMESHGROUPEX;cdecl;
oapiMeshTextureCount:function(hMesh:pointer):dword;cdecl;

oapiCameraInternal:function:boolean;cdecl;
oapiCockpitMode:function:integer;cdecl;

oapiGetTextureHandle:function(hMesh:pointer;texidx:dword):pointer;cdecl;

oapiWriteScenario_string:procedure(scn:DWORD;item,str:pchar);  cdecl;
oapiReadScenario_nextline:function(scn:DWORD;str:pchar):integer;cdecl;

oapiGetDC:function(surf:dword):DWORD;cdecl; 
oapiReleaseDC:procedure(surf:dword;hDC:DWORD);cdecl; 

oapiSetFocusObject:function(hVessel:dword):dword;cdecl;
oapiGetObjectByName:function(name:pchar):dword;cdecl;
oapiGetEmptyMass:function(hObj:dword):double;cdecl;    
oapiSetTimeAcceleration:procedure(warp:double);cdecl;

oapiGetVesselCount:function:integer;cdecl;
oapiIsVessel:function(hObj:dword):boolean;cdecl;
oapiGetVesselByIndex:function(index:integer):dword;cdecl; 

oapiDeleteVessel:function(hVessel,hAlternativeCameraTarget:ohnd):boolean;cdecl;

oapiMeshMaterial:function(hMesh:pointer;idx:dword):pmaterial;cdecl;
                                                                          
oapiCreateAnnotation:function(exclusive:boolean;size:double;col:pvec):dword;cdecl;   
oapiDelAnnotation:function(hNote:dword):boolean;cdecl;             
oapiAnnotationSetText:procedure(hNote:dword;note:pchar);cdecl;
oapiAnnotationSetPos:procedure(hNote:dword;x1,y1,x2,y2:double);cdecl;  

oapiGetShipAirspeedVector:function(hVessel:ohnd;speedvec:pvec):boolean;cdecl;
oapiGetFocusAirspeed:function(speedvec:pdouble):boolean;cdecl;
oapiGetFocusShipAirspeedVector:function(speedvec:pvec):boolean;cdecl;

oapiCameraTargetDist:function:double;cdecl;  
oapiCameraScaleDist:procedure(dscale:double);cdecl;  


//oapiMeshGroup:function(hMesh:pointer;idx:dword):pMESHGROUP;cdecl;
//oapiSetTexture:function(hMesh:pointer;texidx,tex:dword):boolean;cdecl;
oapiCreateTextureSurface:function(width,height:integer):dword;cdecl;

oapiGetPause:function:boolean;cdecl;    
oapiSaveScenario:function(fname,desc:pchar):boolean;cdecl;    
oapiGetBasePlanet:function(hbase:dword):dword;cdecl; 
 


vesGetMeshCount:function(v:pointer):dword;cdecl;
vesGetMeshTemplate:function(v:pointer;idx:dword):pointer;cdecl;  

vesGetAnimPtr:function(v:pointer;a:pointer):integer; cdecl;  
vesGetMGroup_Transform:function(v:pointer;mgt:pointer):mgroup_transform; cdecl;
vesSetMGroup_Transform:procedure(v:pointer;mgt:pointer;grp:pmgroup_transform); cdecl;  

vesGetMeshVisibilityMode:function(v:pointer;idx:dword):word;cdecl;
vesCopyMeshFromTemplate:function(v:pointer;idx:dword):pointer;cdecl;
vesGetMeshOffset:function(v:pointer;idx:dword;ofs:pvec):boolean;cdecl;

Createvesselorb:function(name,classnam,gbody:pchar;rp,rv,ar,vr:vec):integer;cdecl;
Createvessellnd:function(name,classnam,gbody:pchar;lat,lon,hdg:double):integer;cdecl;

vesGetClassName:procedure(v:pointer;name:pchar);cdecl;
vesgetpmat:procedure(v:pointer;p1,p2,p3:pvec);cdecl; 
vesgetgmat:procedure(v:pointer;p1,p2,p3:pvec);cdecl; 
vesGlobal2Local:function(v:pointer;vc:vec):vec; cdecl; 
vesLocal2Global:function(v:pointer;vc:vec):vec; cdecl; 

vesGetSurfaceRef:function(v:pointer):ohnd; cdecl; 
vesGetPeDist:function(v:pointer):double; cdecl; 
vesGetApDist:function(v:pointer):double; cdecl;  
vesAddForce:procedure(v:pointer;f,r:vec);cdecl; 


vesGetHorizonAirspeedVector:function(v:pointer):vec; cdecl;  
vesGetPitch:function(v:pointer):double; cdecl;  
vesGetBank:function(v:pointer):double; cdecl;  
vesGetAOA:function(v:pointer):double; cdecl;  

vesGetRotVelocity:function(v:pointer;t:integer):double; cdecl;  


vesSetThrusterGroupLeveld:procedure(v:pointer;thgt:dword;level:double); cdecl; 
vesGetThrusterGroupLeveld:function(v:pointer;thgt:dword):double; cdecl; 
vesSetThrusterGroupLevel:procedure(v:pointer;thg:dword;level:double); cdecl; 
vesGetThrusterGroupLevel:function(v:pointer;thg:dword):double; cdecl; 
vesSetControlSurfaceLevel:procedure(v:pointer;thgt:dword;level:double); cdecl;  
vesGetControlSurfaceLevel:function(v:pointer;thgt:dword):double; cdecl;  
vesSetADCtrlMode:procedure(v:pointer;mode:dword); cdecl;  

vesGetarot:function(v:pointer):vec; cdecl;
vesGetvrot:function(v:pointer):vec; cdecl;


vesGetTouchdownPoints:procedure(v:pointer;p1,p2,p3:pvec);cdecl; 
vesSetTouchdownPoints:procedure(v:pointer;p1,p2,p3:pvec);cdecl; 
vesGetWheelbrakeLevel:function(v:pointer;n:integer):double; cdecl;                       
vesGetShipAirspeedVector:function(v:pointer):vec; cdecl;                      
vesGetAirspeed:function(v:pointer):double; cdecl;  

vesGetAngularVel:function(v:pointer):vec; cdecl;  
vesGetPMI:function(v:pointer):vec; cdecl;  
vesLndStatus:function(v:pointer):integer; cdecl;  

vesdoshwrp:procedure(v:pointer;sh:vec);cdecl; 
vesdorshwrp:procedure(v:pointer;sh:vec);cdecl; 
vesdovelwrp:procedure(v:pointer;sh:vec);cdecl; 
vesdorotwrp:procedure(v:pointer;sh:vec);cdecl; 


vessetstatus:procedure(v:pointer;st:integer);cdecl;   
vessetsize:procedure(v:pointer;s:double);cdecl; 

vesGetExhaustCount:function(v:pointer):integer; cdecl;
vesGetExhaustLevel:function(v:pointer;idx:dword):double; cdecl;
vesGetExhaustSpec :function(v:pointer;idx:dword;lscale,wscale:pdouble;pos,dir:pvec;tex:pointer):boolean; cdecl;

vesGetCOG_elev:function(v:pointer):double; cdecl;


oauxgetplmat:procedure(ho:dword;p1,p2,p3:pvec);cdecl; 
        
procedure initoapi(a:ilp);   
function  str2okey(s:string):dword;

implementation

procedure initoapi(a:ilp);
begin    
 dbgprint:=pointer(a.dbgp); 
 
 oapiGetSize:=pointer(a.oags);
 oapiGetMass:=pointer(a.oagm);

 oapiGetObjectName:=pointer(a.oagon);

 oapiGetHeading:=pointer(a.oagh);
 oapiGetFocusHeading:=pointer(a.oagfh);
 oapiGetAltitude:=pointer(a.oaga);
 oapiGetFocusAltitude:=pointer(a.oagfa);

 oapiGetTimeAcceleration:=pointer(a.oagta);

 oapiGetEquPos:=pointer(a.oagep);
 oapiGetFocusEquPos:=pointer(a.oagfep); 

 oapiCameraAperture:=pointer(a.oacamap);
 oapiCameraGlobalPos:=pointer(a.oacamgp); 
 oapiCameraGlobalDir:=pointer(a.oacamgd); 
 oapiCameraTarget:=pointer(a.oacamt); 

 oapiGetGbodyByIndex:=pointer(a.oaggbbi); 
 oapiGetGbodyByName:=pointer(a.oaggbbn); 
 oapiGetGlobalPos:=pointer(a.oaggp); 
 oapiGetGlobalVel:=pointer(a.oaggv); 
 oapiGetObjectCount:=pointer(a.oagobc); 
 oapiGetObjectByIndex:=pointer(a.oagobbi); 

 oapiGetPlanetAtmConstants:=pointer(a.oagplac); 
 oapiGetPlanetAtmParams:=pointer(a.oagplap); 
 oapiGetPlanetAtmParamsnew:=pointer(a.oagplapn); 

 oapiGetObjectType:=pointer(a.oagobt); 
 oapiGetFocusObject:=pointer(a.oagfob); 
 oapiGetBaseCount:=pointer(a.oagbsc); 
 oapiGetBaseByIndex:=pointer(a.oagbsbi); 

 oapiGetSimTime:=pointer(a.oagsimt); 
 oapiGetSimMJD:=pointer(a.oagsimm); 

 oapiCameraRotationMatrix:=pointer(a.oacamrm); 
 oapiCameraMode:=pointer(a.oacamm); 

 oapiGetRotationMatrix:=pointer(a.oagrotm); 

 oapiCameraProxyGbody:=pointer(a.oacampg); 
 oapiPlanetHasAtmosphere:=pointer(a.oaplha); 

 oapiGetObjectParam:=pointer(a.oagobp); 
